--- a/zero.css
+++ b/zero.css
@@ -44,8 +44,10 @@ ul {
 }
 
 .container {
-/*   
-  border: 1px solid black; */
+  width: 1158px;
+  margin: 0 auto;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .body {
@@ -81,7 +83,7 @@ img {
   height: auto;
 }
 
-/* ----------Header section---------- */
+/* Header section */
 .header {
   border-bottom: 1px solid var(--frame-colour);
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
@@ -91,7 +93,6 @@ img {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  position: relative;
 }
 
 .link-style {
@@ -168,136 +169,19 @@ img {
   transition: color 0.25s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* Header menu */
+/* /Header section */
 
-@media (max-width: 767px) {
-  .header-list,
-  .contacts-info {
-    display: none;
-  }
-}
-
-.menu-toggle {
-  min-height: 40px;
-  min-width: 40px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  margin: 0;
-  padding: 0;
-  background-color: transparent;
-  cursor: pointer;
-  border: none;
-  border-radius: 50%;
-  outline: none;
-}
-
-@media (min-width: 768px) {
-  .menu-toggle {
-    display: none;
-  }
-}
-
-.menu-container {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background-color: #ffffff;
-  z-index: 999;
-
-  transform: translateX(100%);
-  transition: transform 250ms ease-in-out;
-}
-
-.menu-container.is-open {
-  transform: translateX(0);
-}
-
-.menu-container .menu-toggle {
-  position: relative;
-  top: 16px;
-  right: 16px;
-  color: #fff;
-}
-
-.mobile-menu {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-
-  /* padding-top: 25px; */
-  padding-left: 40px;
-}
-
-.menu-button {
-  position: absolute;
-  top: 16px;
-  right: 16px;
-  transform: translate(-24px -16px) scale(1);
-
-  fill: currentColor;
-}
-
-.mobile-menu .link-style {
-  color: #2e2f42;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.11;
-  letter-spacing: 0.02em;
-  text-transform: capitalize;
-  position: relative;
-  transition: color 0.25s cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.mobile-menu .active {
-  color: #404bbf;
-}
-.mobile-menu .link-style.active::after {
-  display: none;
-}
-
-.mobile-menu-contacts {
-  padding-top: 284px;
-}
-
-.header-contacts-phone {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.1;
-  letter-spacing: 0.02em;
-  text-transform: capitalize;
-  color: #4d5ae5;
-}
-.header-contacts-mail {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: #434455;
-  padding-top: 40px;
-}
-
-.mobile-menu .footermedia {
-  padding-top: 48px;
-  padding-bottom: 25px;
-}
-.mobile-menu .team-social-link {
-  background-color: #f4f4fd;
-}
-
-/* /Header menu */
-
-/* ----------/Header section---------- */
-
-/* ----------Hero section---------- */
+/* Hero section */
 
 .hero {
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/people-office.jpg);
   background-repeat: no-repeat;
   background-position: center;
-  display: flex;
+  display: block;
   flex-grow: 1;
   align-items: center;
   margin-right: auto;
@@ -305,6 +189,9 @@ img {
   flex-direction: column;
   text-align: center;
   align-content: center;
+
+  padding-top: 188px;
+  padding-bottom: 188px;
 }
 
 .hero-title {
@@ -345,28 +232,29 @@ img {
   background: var(--accent-colour);
 }
 
-/* ----------/Hero section---------- */
+/* /Hero section */
 
-/* ----------Advantages sections---------- */
+/* Advantages sections */
 
 .qualities {
-  padding-top: 96px;
-  padding-bottom: 96px;
+  padding-top: 120px;
 }
 
 .conteiner-advantages {
-  display: block;
+  display: flex;
 }
 
 .qualities-list {
-  display: block;
+  display: flex;
+  gap: 24px;
 }
 
 .list {
 }
 
 .qualities-items-list {
-  justify-content: center;
+  max-width: 264px;
+  /* margin-right: 24px; */
 }
 
 .icon-style {
@@ -376,10 +264,11 @@ img {
   height: 112px;
   border-radius: 5%;
   background-color: #f4f4fd;
+
+  margin-bottom: 8px;
 }
 .advantages-icon {
-  background-color: #f4f4fd;
-  margin: 24px 100px 24px 100px;
+  /* margin: 24px 100px 24px 100px; */
 }
 
 .qualities-name {
@@ -394,14 +283,13 @@ img {
 .qualities-text {
   color: var(--item-text-colour);
 }
-/* ----------/Advantages sections---------- */
+/* /Advantages sections */
 
-/* ----------Examples section---------- */
+/* Examples section */
 .examples {
   margin-bottom: 0;
-  padding-bottom: 0;
-  /* padding-top: 120px; */
-  /* padding-bottom: 120px; */
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 .examples-section {
   display: block;
@@ -424,12 +312,14 @@ img {
 }
 .exampless-item {
 }
-/* ----------/Examples section----------*/
+/* /Examples section*/
 
-/* ----------Team section---------- */
+/* Team section */
 
 .team {
   background: var(--team-colour);
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 .container-team {
   margin-left: auto;
@@ -453,7 +343,9 @@ img {
   margin-bottom: 72px;
 }
 .teamt-list {
-  display: block;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
 
   gap: 24px;
   padding: 0;
@@ -463,7 +355,7 @@ img {
 }
 .team-item {
   background: var(--team-background);
-
+  flex-basis: calc((100% / 4) - 18px);
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   border-radius: 0px 0px 4px 4px;
@@ -515,24 +407,28 @@ img {
   background-color: #404bbf;
 }
 
-/* ----------/Team section---------- */
+/* /Team section */
 
-/* ----------Customers section---------- */
+/* Customers section */
 .customers {
-  padding-top: 96px;
-  padding-bottom: 96px;
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 .container-customers {
-  display: flex;
-  flex-direction: column;
 }
 .customers-list {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
+
   gap: 24px;
+}
+.customers-item {
+  flex-basis: calc((100% / 6) - 41px);
+}
+.customers-item:last-child {
+  margin-right: 0;
 }
 
 .customers-link {
@@ -558,16 +454,19 @@ img {
   transition: fill 0.25s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* ----------/Customers section---------- */
+/* /Customers section */
 
-/* ----------Footer section---------- */
+/* Footer section */
 
 .footer-container {
-  display: block;
+  display: flex;
+  flex-direction: row;
+  gap: 120px;
 }
 
 .footer {
   background: var(--footer-colour);
+  padding: 100px 0;
 }
 
 .footer-logo {
@@ -593,8 +492,6 @@ img {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-
-  text-align: center;
 
   margin-bottom: 16px;
 }
@@ -659,7 +556,7 @@ footer .team-social-link:is(:hover, :focus) {
   margin-left: 16px;
 }
 
-/* ----------/Footer section---------- */
+/* /Footer section */
 
 .backdrop {
   width: 100%;
