--- a/css/mobile.css
+++ b/css/mobile.css
@@ -119,8 +119,20 @@
       ),
       url(../images/people-office-mobile.jpg);
   }
+
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .hero {
+      background-image: linear-gradient(
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/people-office-mobile-x2.jpg);
+    }
+  }
   /* ----------Header section---------- */
-  
+
   .container-nav {
     margin-left: auto;
     margin-right: auto;
@@ -128,14 +140,14 @@
     padding-right: 15px;
     height: 70px;
   }
-  .mobile-menu .header-item{
-    margin-top: 40px;
-  }
-  .menu-container{
+  .menu-container {
     margin-left: auto;
     margin-right: auto;
     padding-left: 15px;
     padding-right: 15px;
+  }
 
+  .mobile-menu-list{
+    padding-top: 65px;
   }
 }
