--- a/css/tablet.css
+++ b/css/tablet.css
@@ -80,16 +80,29 @@
   .footer-form .form-input {
     width: 264px;
   }
-  .footer
+  .footer {
+  }
   /* ----------/Footer section---------- */
   /* ----------/Hero section---------- */
-  
+
   .hero {
     background-image: linear-gradient(
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
       ),
       url(../images/people-office-tablet.jpg);
+  }
+
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .hero {
+      background-image: linear-gradient(
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/people-office-tablet-x2.jpg);
+    }
   }
   .hero-title {
     font-size: 56px;
@@ -106,5 +119,4 @@
     display: flex;
     flex-direction: row;
   }
-
 }
